feat(backend): Creación del Módulo ctividades y documentación de los dos primeros endpoints. getFichaTécnica y postSubActividadesBulk. Adición del enum de tipos de actividades al domain
